better exploitable config

--- a/chatserver/ejabberd.yml
+++ b/chatserver/ejabberd.yml
@@ -94,7 +94,7 @@ log_rate_limit: 100
 ##   - "example.org"
 ##
 hosts:
-  - "localhost"
+  - "ooo.vchat"
 
 ##
 ## route_subdomains: Delegate subdomains to other XMPP servers.
@@ -165,25 +165,25 @@ listen:
     max_stanza_size: 65536
     shaper: c2s_shaper
     access: c2s
-    ##   -
-    ##     port: 5269
-    ##     ip: "::"
-    ##     module: ejabberd_s2s_in
-    ##     max_stanza_size: 131072
-    ##     shaper: s2s_shaper
-    ##   -
-    ##     port: 5280
-    ##     ip: "::"
-    ##     module: ejabberd_http
-    ##     request_handlers:
-    ##       "/ws": ejabberd_http_ws
-    ##       "/bosh": mod_bosh
-    ##       "/oauth": ejabberd_oauth
-    ##       "/api": mod_http_api
-    ##     ##  "/pub/archive": mod_http_fileserver
-    ##     web_admin: true
-    ##     ## register: true
-    ##     captcha: false
+##-
+##  port: 5269
+##  ip: "::"
+##  module: ejabberd_s2s_in
+##  max_stanza_size: 131072
+##  shaper: s2s_shaper
+##-
+##  port: 5280
+##  ip: "::"
+##  module: ejabberd_http
+##  request_handlers:
+##    "/ws": ejabberd_http_ws
+##    "/bosh": mod_bosh
+##    "/oauth": ejabberd_oauth
+##    "/api": mod_http_api
+##  ##  "/pub/archive": mod_http_fileserver
+##  web_admin: true
+##  ## register: true
+##  captcha: false
   ##
   ## ejabberd_service: Interact with external components (transports, ...)
   ##
@@ -257,7 +257,7 @@ listen:
 ## Allowed values are: false, optional or required
 ## You must specify 'certfiles' option
 ##
-s2s_use_starttls: required
+## s2s_use_starttls: optional
 
 ##
 ## S2S whitelist or blacklist
@@ -348,11 +348,11 @@ s2s_use_starttls: required
 ## LDAP filter:
 ## ldap_filter: "(objectClass=shadowAccount)"
 
-##
+
 ## Anonymous login support:
-## auth_method: anonymous
-## anonymous_protocol: sasl_anon | login_anon | both
-## allow_multiple_connections: true | false
+auth_method: anonymous
+  ## anonymous_protocol: sasl_anon | login_anon | both
+  ## allow_multiple_connections: true | false
 
 ## host_config:
 ##   "public.example.org":
@@ -362,11 +362,11 @@ s2s_use_starttls: required
 ##
 ## To use both anonymous and internal authentication:
 ##
-host_config:
-    "localhost":
-        auth_method:
-            # - internal
-            - anonymous
+## host_config:
+##   "public.example.org":
+##     auth_method:
+##       - internal
+##       - anonymous
 
 ###.  ==============
 ###'  DATABASE SETUP
@@ -463,7 +463,7 @@ acl:
   ##
   admin:
     user:
-        # - "admin@ooo.vchat"
+  ##  - "admin@localhost"
 
   ##
   ## Blocked users
@@ -530,8 +530,7 @@ shaper_rules:
     - 100
   ## For C2S connections, all users except admins use the "normal" shaper
   c2s_shaper:
-    - none: admin
-    - fast
+    - none
   ## All S2S connections use the "fast" shaper
   s2s_shaper: fast
 
@@ -540,8 +539,7 @@ shaper_rules:
 access_rules:
   ## This rule allows access only for local users:
   local:
-    - deny
-      # - allow: local
+    - allow: local
   ## Only non-blocked users can use c2s connections:
   c2s:
     - deny: blocked
@@ -549,27 +547,22 @@ access_rules:
   ## Only admins can send announcement messages:
   announce:
     - deny
-      # - allow: admin
   ## Only admins can use the configuration interface:
   configure:
     - deny
-      # - allow: admin
   ## Only accounts of the local ejabberd server can create rooms:
   muc_create:
     - deny
-      # - allow: local
   ## Only accounts on the local ejabberd server can create Pubsub nodes:
   pubsub_createnode:
     - deny
-      # - allow: local
   ## In-band registration allows registration of any possible username.
   ## To disable in-band registration, replace 'allow' with 'deny'.
   register:
     - deny
   ## Only allow to register from localhost
   trusted_network:
-    - deny
-      # - allow: loopback
+    - allow: loopback
   ## Do not establish S2S connections with bad servers
   ## If you enable this you also have to uncomment "s2s_access: s2s"
   ## s2s:
@@ -600,31 +593,34 @@ access_rules:
 api_permissions:
   "console commands":
     from:
-      - ejabberd_ctl
-    who: all
-    what: "*"
-    #   "admin access":
-    #     who:
-    #       - access:
-    #           - allow:
-    #             - acl: loopback
-    #             - acl: admin
-    #       - oauth:
-    #         - scope: "ejabberd:admin"
-    #         - access:
-    #           - allow:
-    #             - acl: loopback
-    #             - acl: admin
-    #     what:
-    #       - "*"
-    #       - "!stop"
-    #       - "!start"
-    #   "public commands":
-    #     who:
-    #       - ip: "127.0.0.1/8"
-    #     what:
-    #       - "status"
-    #       - "connected_users_number"
+      - none
+# "console commands":
+#   from:
+#     - ejabberd_ctl
+#   who: all
+#   what: "*"
+# "admin access":
+#   who:
+#     - access:
+#         - allow:
+#           - acl: loopback
+#           - acl: admin
+#     - oauth:
+#       - scope: "ejabberd:admin"
+#       - access:
+#         - allow:
+#           - acl: loopback
+#           - acl: admin
+#   what:
+#     - "*"
+#     - "!stop"
+#     - "!start"
+# "public commands":
+#   who:
+#     - ip: "127.0.0.1/8"
+#   what:
+#     - "status"
+#     - "connected_users_number"
 
 ## By default the frequency of account registrations from the same IP
 ## is limited to 1 account every 10 minutes. To disable, specify: infinity
